--- a/templates/app/editJob.html
+++ b/templates/app/editJob.html
@@ -15,7 +15,7 @@
 
                 <script>
                   //used below for maitaining Color List coun
-                  var colorCount = 1;
+                  var colorCount = 0;
                   var brand = "";
                   var patchStandards;
                   var patchTolerances;
@@ -25,18 +25,16 @@
                   function report(value) {
                     brand = value;
                     console.log("value=", value);
-                    if (value == "") return; // please select - possibly you want something else here
+                    if (value == "") return; // please select - possibly you want something else he
                     else {
-                      $.get("{%url "app:valuesFromBrand" %}", {
-                          "brand": value
-                        },
+                      $.get("{%url "app:valuesFromBrand" %}", {"brand": value},
                         function(values) {
                           divisions = {{divisions}}
                           console.log("values=", values, " divisions=", divisions);
 
                           $('#divisionOptions option').remove();
                           for (var count = 0; count < values["divisions"].length; count++) {
-                            if(divisions.indexOf(values["divisions"][count]["id"]) > -1){
+                            if(divisions.indexOf(values["divisions"][count]["id"]) > -1 && {{job.brand.id}} == brand){
                               $('#divisionOptions').append('<option value=' + values["divisions"][count]["id"] + ' selected>' + values["divisions"][count]["name"] + '</option>');
                             }
                             else{
@@ -46,6 +44,7 @@
                           }
 
                           $('#productOptions option').remove();
+                          $('#productOptions').append('<option disabled selected value> -- select an option -- </option>')
                           for (var count = 0; count < values["products"].length; count++) {
                             var id = (values["products"][count]["id"]).toString();
                             if (id.localeCompare("{{job.product.id}}") == 0) {
@@ -56,21 +55,29 @@
                             }
                           }
 
-                          $('select[name^=brandColor] option').remove();
                           patchStandards = values["patchStandards"];
-                          $('select[name^=brandColor]').append('<option disabled selected value> -- select an option -- </option>');
-                          for (var count = 0; count < values["patchStandards"].length; count++) {
-                            //  console.log("patchStandards",values["patchStandards"][count]["id"], values["patchStandards"][count]["name"] );
-                            $('select[name^=brandColor]').append(new Option(values["patchStandards"][count]["name"], values["patchStandards"][count]["id"]));
-                          }
-
-                          $('select[name^=patchTolerance] option').remove();
                           patchTolerances = values["patchTolerances"];
+                          patchSta = {{patchSta}};
+                          patchTol = {{patchTol}};
 
+                          $('select[name^=brandColor] option').remove();
+                          $('select[name^=patchTolerance] option').remove();
                           $('select[name^=patchTolerance]').append('<option disabled selected value> -- select an option -- </option>');
-                          for (var count = 0; count < values["patchTolerances"].length; count++) {
-                            //  console.log("patchTolerances",values["patchTolerances"][count]["id"], values["patchTolerances"][count]["name"] );
-                            $('select[name^=patchTolerance]').append(new Option(values["patchTolerances"][count]["name"], values["patchTolerances"][count]["id"]));
+                          $('select[name^=brandColor]').append('<option disabled selected value> -- select an option -- </option>');
+
+                          for(var count=0; count < patchStandards.length; count++){
+                            $('select[name^=brandColor]').append(new Option(patchStandards[count]["name"], patchStandards[count]["id"]));
+                          }
+                          for(var count=0; count < patchTolerances.length; count++){
+                            $('select[name^=patchTolerance]').append( new Option(values["patchTolerances"][count]["name"],values["patchTolerances"][count]["id"]) );
+                          }
+                          if({{job.brand.id}} == brand){
+                            for(var count=1; count <= patchSta.length; count++){
+                                $('select[name=brandColor'+count+']').val(patchSta[count-1])
+                                .find("option[value=" + patchSta[count-1] +"]").attr('selected', true);
+                                $('select[name=patchTolerance'+count+']').val(patchTol[count-1])
+                                .find("option[value=" + patchTol[count-1] +"]").attr('selected', true);
+                            }
                           }
 
                         }).fail(function() {
@@ -102,7 +109,7 @@
                   <div class="form-group">
                     <label>Product Name:</label>
                     <select id="productOptions" name="product"  class="form-control" required>
-                      {# <option disabled selected value> -- select an option -- </option>#}
+
                     </select>
                   </div>
 
@@ -160,37 +167,40 @@
                         }
                       </script>
                       <script>
-                      function fieldRemove() {
-                        if(colorCount!=1){
-                          document.getElementById('countOfColor').value = colorCount;
-                          colorCount-=1;
-                          $('#addTable tr').last().remove()
+                        function fieldRemove() {
+                          if(colorCount!=1){
+                            document.getElementById('countOfColor').value = colorCount;
+                            colorCount-=1;
+                            $('#addTable tr').last().remove()
+                          }
+                          return false;
+
                         }
-                        return false;
-
-                      }
-
                       </script>
 
                       <tbody id="addTable">
-                        <tr>
-                          <td><label  name="colorListLable1">Color List 1</label></td>
-                          <td><select required id="brandColorOptions1" name="brandColor1" class="form-control">
-                                <option disabled selected value> -- select an option -- </option>
+                        {% for each in jobPatch  %}
+                          <tr>
+                            <td><label  name="colorListLable{{forloop.counter}}">Color List {{forloop.counter}}</label></td>
+                            <td>
+                              <select required id="brandColorOptions{{forloop.counter}}" name="brandColor{{forloop.counter}}" class="form-control">
                               </select>
-                          </td>
-                          <td><select required id="patchToleranceOptions1" name="patchTolerance1" class="form-control">
-                                <option disabled selected value> -- select an option -- </option>
+                            </td>
+                            <td>
+                              <select required id="patchToleranceOptions{{forloop.counter}}" name="patchTolerance{{forloop.counter}}" class="form-control">
                               </select>
-                          </td>
-                          <td></td>
-                        </tr>
+                            </td>
+                            <td></td>
+                          </tr>
+                        {% endfor %}
                       </tbody>
                     </table>
 
                     <input type="hidden" id="countOfColor" name="countOfColor" value="">
                     <script type="text/javascript">
+                      colorCount={{jobPatch|length}};
                       document.getElementById('countOfColor').value = colorCount;
+
                     </script>
 
 
@@ -207,9 +217,7 @@
                     </select>
                   </div>
 
-
-
-                  <button type="submit" class="btn btn-default">Create Job</button>
+                  <button type="submit" class="btn btn-default">Update Job</button>
 
                   <br>
                   <br>
