--- a/templates/app/showBrands.html
+++ b/templates/app/showBrands.html
@@ -25,14 +25,29 @@
                     {% for each in brands %}
                       <tr>
                         <td>{{each.name}}</td>
-                        <td><button type="button" name="edit{{forloop.counter}}" class="btn">Edit <i class="fa fa-pencil" aria-hidden="true"></i></td></button>
-                        <td><button type="button" name="delete{{forloop.counter}}" class="btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></td></button>
+                        <td><button type="button" name="edit{{forloop.counter}}" value="{{each.pk}}" class="btn" onclick="editBrand(this)">Edit <i class="fa fa-pencil" aria-hidden="true"></i></td></button>
+                        <td><button type="button" name="delete{{forloop.counter}}" value="{{each.pk}}" class="btn" onclick="deleteBrand(this)">Delete <i class="fa fa-trash" aria-hidden="true"></i></td></button>
                       </tr>
                     {% endfor %}
 
                   </tbody>
                 </table>
+                <script type="text/javascript">
+                    function editBrand(item){
+                      value = item.value;
+                      console.log(value);
+                      location.href = "/editBrand/"+value;
 
+                    }
+
+                    function deleteBrand(item){
+                      //alert(item.options[item.selectedIndex].text);
+                      value = item.value;
+                      console.log(value);
+                      location.href = "/deleteBrand/"+value;
+
+                    }
+                </script>
               </div>
             </div>
           </div>
