--- a/templates/app/showUploads.html
+++ b/templates/app/showUploads.html
@@ -29,14 +29,29 @@
                         <td>{{each.file_name}}</td>
                         <td>{{each.fileCategory}}</td>
                         <td><a target="_blank" href="{{each.fileUploaded.url}}">View <i class="fa fa-eye" aria-hidden="true"></i></a></td>
-                        <td><button type="button" name="edit{{forloop.counter}}" class="btn">Edit <i class="fa fa-pencil" aria-hidden="true"></i></td></button>
-                        <td><button type="button" name="delete{{forloop.counter}}" class="btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></td></button>
+                        <td><button type="button" name="edit{{forloop.counter}}" value="{{each.pk}}" class="btn" onclick="editUpload(this)">Edit <i class="fa fa-pencil" aria-hidden="true"></i></td></button>
+                        <td><button type="button" name="delete{{forloop.counter}}" value="{{each.pk}}" class="btn" onclick="deleteUpload(this)">Delete <i class="fa fa-trash" aria-hidden="true"></i></td></button>
                       </tr>
                     {% endfor %}
 
                   </tbody>
                 </table>
+                <script type="text/javascript">
+                    function editUpload(item){
+                      value = item.value;
+                      console.log(value);
+                      location.href = "/editUpload/"+value;
 
+                    }
+
+                    function deleteUpload(item){
+                      //alert(item.options[item.selectedIndex].text);
+                      value = item.value;
+                      console.log(value);
+                      location.href = "/deleteUpload/"+value;
+
+                    }
+                </script>
               </div>
             </div>
           </div>
